terraform.d/deployment.conf.d/App.helloworld/deployment.yml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "helloworld-app-1"
  labels:
    app: "helloworld-app-1"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "helloworld-app-1"
  template:
    metadata:
      labels:
        app: "helloworld-app-1"
    spec:
      containers:
      - name: "helloworld-restify"
        image: "udomsak/helloworld-restify"
